# Capture_Calibrate_Daheng

props_example/: OpenCV_320_vc14.props  daheng.props
samples/: CMakeLists.txt  KJCalibration.cpp  KJCalibration.h  generate_sln.bat  main.cpp
